# video2text

./: README.md  pyproject.toml
scripts/: download.py  main.py
