[tool.poetry]
name = "video2text"
version = "0.1.0"
description = ""
authors = ["Egor Gershevskyi <e.gershevskyi@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
yt-dlp = "^2023.10.7"
setuptools = "^68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

